# ChessLab

./: .gitignore  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/: routes.py
backend/app/core/: config.py
backend/app/db/: models.py  session.py
backend/app/services/: analysis.py  coach.py  engine.py  ollama.py  pgn.py
backend/tests/: conftest.py  test_analysis.py  test_api.py  test_coach.py  test_pgn.py
docs/: ARCHITECTURE.md  ROADMAP.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  types.ts
frontend/src/components/: AnalysisPanel.tsx  Board.tsx  CoachPanel.tsx  EvalBar.tsx  EvalGraph.tsx  GameList.tsx  MoveList.tsx  PgnUpload.tsx
frontend/src/lib/: chess.test.ts  chess.ts
scripts/: dev.ps1  get-stockfish.ps1
